--- a/apps/stock/app/package.json
+++ b/apps/stock/app/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.3.0",
     "router": "workspace:*"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.37",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
