--- a/apps/stock/Cargo.toml
+++ b/apps/stock/Cargo.toml
@@ -11,5 +11,5 @@ tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread", "fs"
 axum = { workspace = true }
 dotenv = "0.15.0"
 reqwest = { version = "0.11.18", features = ["json"] }
-serde = { version = "1.0.163", features = ["derive"] }
+serde = { workspace = true }
 argon2 = "0.5.0"
