--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ anyhow = "1.0.71"
 tokio = "1.28.1"
 axum = "0.6.18"
 serde = { version = "1.0.163", features = ["derive"] }
+lexi_rust = { path = "../lexi/lexi_rust" }
