--- a/apps/axum-htmx/Cargo.toml
+++ b/apps/axum-htmx/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = { workspace = true }
 tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread", "fs"] }
 axum = { workspace = true, features = ["form"] }
 serde = { workspace = true }
-lexi_rust = { path = "../../../lexi/lexi_rust" }
+lexi_rust = { workspace = true }
 chrono = "0.4.26"
 serde_json = "1.0.100"
 urlencoding = "2.1.2"
