--- a/apps/lexidb-docs/package.json
+++ b/apps/lexidb-docs/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "lexidb-docs",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^2.8.0"
-  }
+    "name": "lexidb-docs",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/tailwind": "^3.1.3",
+        "astro": "^2.8.0",
+        "router": "workspace:*",
+        "tailwindcss": "^3.3.2"
+    }
 }
