--- a/apps/chat/Cargo.toml
+++ b/apps/chat/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread", "fs"] }
-axum = { workspace = true }
+axum = { workspace = true, features = ["form"] }
 serde = { workspace = true }
 serde_json = "1.0.100"
 rand = "0.8.5"
