--- a/apps/weather/Cargo.toml
+++ b/apps/weather/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axum-htmx"
+name = "weather"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,9 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread", "fs"] }
-axum = { workspace = true, features = ["form"] }
+axum = { workspace = true }
+dotenv = "0.15.0"
+reqwest = { version = "0.11.18", features = ["json"] }
 serde = { workspace = true }
-lexi_rust = { workspace = true }
-chrono = "0.4.26"
-serde_json = "1.0.100"
-urlencoding = "2.1.2"
