--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -10,9 +10,7 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/tailwind": "^3.1.3",
-        "astro": "^2.5.0",
         "router": "workspace:*",
-        "tailwindcss": "^3.3.2"
+        "astro": "^2.9.6"
     }
 }
