--- a/apps/news/Cargo.toml
+++ b/apps/news/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread", "fs"] }
-axum = { workspace = true }
+axum = { workspace = true, features = ["form"] }
 dotenv = "0.15.0"
 reqwest = { version = "0.11.18", features = ["json"] }
 serde = { workspace = true }
