--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -10,7 +10,11 @@
         "astro": "astro"
     },
     "dependencies": {
-        "router": "workspace:*",
-        "astro": "^2.9.6"
+        "astro": "^2.9.6",
+        "router": "workspace:*"
+    },
+    "devDependencies": {
+        "@astrojs/tailwind": "^3.1.3",
+        "tailwindcss": "^3.3.2"
     }
 }
