chore: start stock rewrite

--- a/apps/stock/Makefile
+++ b/apps/stock/Makefile
@@ -1,5 +1,5 @@
 all:
-	go build -o bin/stock cmd/stock/main.go
+	go build -o bin/stock ./cmd/stock.go
 
 run:
-	go run cmd/stock/main.go
+	go run cmd/stock.go
