feat: start algorithms app

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "apps/chat",
     "apps/weather",
     "apps/news",
+    "apps/algorithms",
 ]
 
 [workspace.dependencies]
@@ -14,3 +15,4 @@ tokio = "1.28.1"
 axum = "0.6.18"
 serde = { version = "1.0.163", features = ["derive"] }
 lexi_rust = { path = "../lexi/lexi_rust" }
+tracing-subscriber = "0.3.17"
