--- a/apps/algorithms/algs-app/package.json
+++ b/apps/algorithms/algs-app/package.json
@@ -13,6 +13,10 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-solid": "^2.7.2"
+  },
+  "dependencies": {
+    "solid-js": "^1.8.3"
   }
 }
