--- a/apps/algorithms/Cargo.toml
+++ b/apps/algorithms/Cargo.toml
@@ -13,3 +13,4 @@ axum = { workspace = true, features = ["ws"] }
 tracing-subscriber = { workspace = true }
 sysinfo = "0.29.2"
 serde_json = "1.0.97"
+async-recursion = "1.0.5"
