--- a/apps/chess/package.json
+++ b/apps/chess/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "css": "npx tailwindcss -i ./styles/index.css -o ./views/styles/index.css --watch",
+        "dev": "npx tailwindcss -i ./styles/index.css -o ./views/styles/index.css --watch",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
